[package]
name = "zigbee-leak-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
teloxide = { version = "0.12", features = ["macros"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
log = "0.4"
anyhow = "1"
env_logger = "0.5"
